# Argus

./: README.md  proj_proposal_markdown.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.specify/memory/: constitution.md
argus/: __init__.py  cli.py  cli_main.py
argus/attacks/: __init__.py  coordinated.py  phantom_uav.py  position_spoof.py
argus/consensus/: __init__.py  average_consensus.py
argus/core/: __init__.py  remote_id.py  swarm.py  uav.py
argus/crypto/: __init__.py
argus/detection/: __init__.py  centrality.py  crypto_detector.py  ml_detection.py  spectral.py
argus/experiments/: __init__.py  config_schema.py  runner.py
argus/utils/: __init__.py
assets/: PERFORMANCE_ANALYSIS.md  PRESENTATION.md
configs/: baseline_swarm.yaml  coordinated_attack.yaml  crypto_defense.yaml  phantom_attack.yaml  position_spoof.yaml
docs/: ENHANCED_DETECTION.md  QUICKSTART.md  README.md  STATUS.md  TROUBLESHOOTING.md  references.md
examples/: attack_demo.py  comprehensive_demo.py  consensus_demo.py  crypto_demo.py  dense_swarm.py  detection_demo.py  live_visualization.py  live_viz_with_detection.py  ml_detection_demo.py  scalability_test.py  simple_swarm.py  visualization_demo.py
results/: README.md
scripts/: run_experiment.py  sweep_parameters.py
src/argus_uav/: __init__.py  cli_main.py
src/argus_uav/detection/: ml_detection.py  spectral.py  temporal_correlation.py
tests/unit/: test_crypto.py  test_remote_id.py  test_uav.py
