[project]
name = "argus_uav"
version = "0.1.0"
description = " A UAV Remote ID Spoofing Defense System "
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{ name = "Sang Buster", email = "hello@singsongaftermath.com" }]
keywords = [
    "uav", "drone", "security", "remote-id", "spoofing", "detection",
    "swarm", "graph-theory", "cryptography", "machine-learning",
    "cybersecurity", "network-analysis", "anomaly-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pycryptodome>=3.23.0",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.7.2",
]


[project.urls]
Homepage = "https://github.com/Sang-Buster/Argus"
Documentation = "https://deepwiki.com/Sang-Buster/Argus"
Repository = "https://github.com/Sang-Buster/Argus"

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0",
]

[project.scripts]
argus = "argus_uav.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_uav"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]
include = ["argus*"]
exclude = ["tests*", "examples*", "results*", "htmlcov*"]

